// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicKeyTable should reloadService after successful delete 1`] = `
<td
  class="css-nyswyy"
  color=""
  colspan="7"
  data-testid="public-key-table"
>
  <div
    class="css-1rrkdnp"
  >
    <div
      class="css-zfcvhg"
    >
      Details
    </div>
  </div>
  <div
    class="css-1gbujtk"
  >
    <div
      class="css-1tl5ru9"
    >
      <span
        class="css-1kupmom"
      >
        Description
      </span>
      <span>
        delete-succeed
      </span>
    </div>
  </div>
  <div
    class="css-1rrkdnp"
  >
    <div
      class="css-zfcvhg"
    >
      Public keys (
      0
      )
    </div>
    <a
      class="css-4c0528"
    >
      Add Key
    </a>
  </div>
  
  <div
    class="css-1gbujtk"
  />
</td>
`;

exports[`PublicKeyTable should render 1`] = `
<td
  class="css-nyswyy"
  color=""
  colspan="7"
  data-testid="public-key-table"
>
  <div
    class="css-1rrkdnp"
  >
    <div
      class="css-zfcvhg"
    >
      Details
    </div>
  </div>
  <div
    class="css-1gbujtk"
  >
    <div
      class="css-1tl5ru9"
    >
      <span
        class="css-1kupmom"
      >
        Description
      </span>
      <span>
        This is a default service for Openhouse.
      </span>
    </div>
  </div>
  <div
    class="css-1rrkdnp"
  >
    <div
      class="css-zfcvhg"
    >
      Public keys (
      0
      )
    </div>
    <a
      class="css-4c0528"
    >
      Add Key
    </a>
  </div>
  
  <div
    class="css-1gbujtk"
  />
</td>
`;

exports[`PublicKeyTable should render addKey after click addKey 1`] = `
<div
  autocomplete="off"
  class="css-vcd2ur"
  data-testid="add-key"
>
  <div
    class="css-y97ykc"
    data-testid="add-key-id"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-id"
    >
      Public Key Id
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-dqae60-input denali-input animated css-fvi5z5"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="key-id"
          name="key-id"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="css-y97ykc"
    data-testid="add-key-value"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-value"
    >
      Key Value
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-1bg1ido-textarea denali-textarea css-6s8cn2"
        data-testid="textarea-wrapper"
      >
        <textarea
          data-testid="textarea"
          id="key-value"
          name="key-value"
        />
      </div>
    </div>
  </div>
  <div
    class="css-15tqd4u"
  >
    <div
      class="css-8y931m"
    >
      <button
        class="css-1iukreu-button denali-button css-7y8rgk"
      >
        Submit
      </button>
      <button
        class="css-1pobclq-button denali-button css-7y8rgk"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`PublicKeyTable should render deleteKey after click trash icon 1`] = `
<div
  class="title"
  data-testid="modal-title"
  id="modal-title"
>
  This deletion is permanent
</div>
`;

exports[`PublicKeyTable should render error if getService throws error 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Failed to fetch PublicKeys.
</div>
`;

exports[`PublicKeyTable should render error if there is an error in props 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Failed to fetch PublicKeys.
</div>
`;

exports[`PublicKeyTable should render error if there is an error in submitDeleteKey(other) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Failed to fetch PublicKeys.
</div>
`;

exports[`PublicKeyTable should render error if there is an error in submitDeleteKey(refresh) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Failed to fetch PublicKeys.
</div>
`;
